# FaCom

./: .gitignore  CMakeLists.txt  README.md
include/: error.h  facom.h  private.h
src/: facom.c  private.c
